openid-training/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # This annotation indicates the issuer to use
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: mobile-front
  namespace: openid-training
spec:
  tls:
    - hosts:
        - mobile.front-office.openid-training.c4-soft.com
      secretName: mobile-front-office-openid-training-tls
  rules:
  - host: mobile.front-office.openid-training.c4-soft.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mobile-front-gateway
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # This annotation indicates the issuer to use
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: web-front
  namespace: openid-training
spec:
  tls:
    - hosts:
        - web.front-office.openid-training.c4-soft.com
      secretName: web-front-office-openid-training-tls
  rules:
  - host: web.front-office.openid-training.c4-soft.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-front-gateway
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # This annotation indicates the issuer to use
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: web-back
  namespace: openid-training
spec:
  tls:
    - hosts:
        - web.back-office.openid-training.c4-soft.com
      secretName: web-back-office-openid-training-tls
  rules:
  - host: web.back-office.openid-training.c4-soft.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-back-gateway
            port:
              number: 8080
